<resources>
    <string name="app_name">BJBSiaga</string>

    <string name="login">Login</string>
    <string name="lupa_pw">Lupa Password?</string>
    <string name="cabang_cianjur">Cabang Cianjur</string>
    <string name="description_image">nothing else</string>
    <string name="title_activity_maps">Map</string>
    <string name="filter_text_no_spacing">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_!@#$%^*()</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="kosong" />
    <string name="menu_home">Beranda</string>
    <string name="menu_input_user">Input User</string>
    <string name="menu_ruangan">Ruangan</string>
    <string name="harap_tunggu">Harap tunggu…</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="input_user">Input User</string>
    <string name="input_jadwal">Input Jadwal</string>
    <string name="reksa_mf">Reksa MF</string>
    <string name="jadwal">Jadwal</string>
    <string name="ruangan">Ruangan</string>
    <string name="keluar">Keluar</string>
    <string name="data_ruangan">Data Ruangan</string>
    <string name="input_data_security">Input Data Security</string>
    <string name="input_data_supervisor">Input Data Supervisor</string>
    <string name="detail_siklus">Detail Siklus</string>
    <string name="nama_jadwal">Hari</string>

    <string name="capture">Capture</string>
    <string name="tambah_data_ruangan">Tambah Data Ruangan</string>
    <string name="nama_ruangan">Nama Ruangan</string>
    <string name="keterangan">Keterangan</string>

    <string name="tambah_data">Tambah Data</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="reset_password">Reset Password</string>
    <string name="budi_setiawan">Budi Setiawan</string>
    <string name="siklus_i">Siklus I</string>
    <string name="siklus_ii">Siklus II</string>
    <string name="siklus_iii">Siklus III</string>
    <string name="siklus_iv">Siklus IV</string>
    <string name="semua_ruangan_telah_diperiksa">Semua Ruangan Telah Diperiksa!</string>
    <string name="harap_klik_ok_untuk_konfirmasi_bahwa_anda_telah_menyelesaikan_tugas_siaga_pada_siklus_ini">Harap klik OK untuk konfirmasi bahwa Anda telah menyelesaikan tugas siaga pada siklus ini.</string>
    <string name="ok">OK</string>
    <string name="open_qr">open qr</string>
    <string name="open_camera">open camera</string>
    <string name="_1">1</string>

    <string name="belum_dicek">Belum dicek</string>
    <string name="title_activity_nav_admin">NavAdmin</string>
    <string name="shift">Shift</string>
    <string name="senin">Senin</string>
    <string name="malam">Malam</string>
    <string name="hapus">Hapus</string>
    <string name="detail_ruangan">Detail Ruangan</string>
    <string name="burning_hall">Burning Hall</string>
    <string name="informasi_lokasi">Informasi Lokasi</string>
    <string name="koordinat_lokasi">Koordinat Lokasi</string>
    <string name="unduh_qrcode">Unduh QRCODE</string>
    <string name="detail_user">Detail User</string>
    <string name="daftar_security">Daftar Security</string>
    <string name="detail_jadwal_hari_senin">Detail Jadwal Hari Senin</string>
    <string name="tambah">Tambah</string>
    <string name="hapus_ruangan">Hapus Ruangan</string>
    <string name="pilih_user">Pilih User</string>
    <string name="detail_security">Detail Security</string>
    <string name="detail_supervisor">Detail Supervisor</string>
    <string name="edit">edit</string>
    <string name="profil">Profil</string>
    <string name="logout">Logout</string>

    <string-array name="list_shifts">
        <item>Malam</item>
        <item>Pagi</item>
    </string-array>
    <string-array name="list_day_names">
        <item>Senin</item>
        <item>Selasa</item>
        <item>Rabu</item>
        <item>Kamis</item>
        <item>Jumat</item>
        <item>Sabtu</item>
        <item>Minggu</item>
    </string-array>
</resources>