<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_data_user"
            android:icon="@drawable/input"
            android:title="@string/input_user" />
        <item
            android:id="@+id/nav_input_jadwal"
            android:icon="@drawable/penjadwalan"
            android:title="@string/input_jadwal" />
        <item
            android:id="@+id/nav_ruangan"
            android:icon="@drawable/room_w"
            android:title="@string/ruangan" />
    </group>
</menu>