<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorPD"
    android:padding="24dp"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="200dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/siaga"
            android:contentDescription="@string/description_image"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/text_title_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semua_ruangan_telah_diperiksa"
            android:textSize="22sp"
            android:textColor="@color/colorWhiteText"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:id="@+id/text_keterangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/harap_klik_ok_untuk_konfirmasi_bahwa_anda_telah_menyelesaikan_tugas_siaga_pada_siklus_ini"
            android:textSize="16sp"
            android:textColor="@color/colorWhiteText"
            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok_dialog_detail_siklus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/colorWhiteText"
        android:background="@drawable/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>