<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <TextView
            android:id="@+id/text_nomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:layout_marginStart="12dp"
            android:textColor="@color/colorWhitePure"
            android:textSize="26sp"/>
        <LinearLayout
            android:layout_toEndOf="@id/text_nomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            >
            <TextView
                android:id="@+id/text_nama_hari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/senin"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhiteText"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:id="@+id/icon_keterangan"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_baseline_nights_stay_24"
                    android:contentDescription="@string/description_image" />
                <TextView
                    android:id="@+id/text_shift"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/malam"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:paddingStart="2dp"
                    android:textColor="@color/colorWhiteText"
                    android:gravity="center_vertical"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey"
        android:layout_marginHorizontal="16dp"/>


</LinearLayout>