<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".security.SecurityDashboardActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/description_image"
        android:scaleType="centerCrop"
        android:src="@drawable/artboard1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/description_image"
        android:src="@drawable/siaga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@color/colorWhiteText"
            android:contentDescription="@string/description_image" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/budi_setiawan"
        android:textAllCaps="true"
        android:textColor="@color/colorWhiteText"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhiteText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_nama" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@+id/view">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_siklus1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:text="@string/siklus_i"
            android:layout_marginTop="24dp"
            android:textColor="@color/colorWhiteText"
            android:background="@drawable/button"
            android:enabled="false"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_siklus2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:text="@string/siklus_ii"
            android:layout_marginTop="24dp"
            android:textColor="@color/colorWhiteText"
            android:background="@drawable/button"
            android:enabled="false"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_siklus3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:text="@string/siklus_iii"
            android:layout_marginTop="24dp"
            android:textColor="@color/colorWhiteText"
            android:background="@drawable/button"
            android:enabled="false"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_siklus4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:text="@string/siklus_iv"
            android:layout_marginTop="24dp"
            android:textColor="@color/colorWhiteText"
            android:background="@drawable/button"
            android:enabled="false"/>

    </LinearLayout>


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/description_image"
        android:src="@drawable/bjb"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/cabang_cianjur"
        android:textColor="@color/colorWhiteText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>