<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.InputJadwalActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/description_image"
        android:scaleType="centerCrop"
        android:src="@drawable/artboard1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/back"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/back"
            android:contentDescription="@string/description_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_jadwal"
            android:textColor="@color/colorWhiteText"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_jadwal"
            android:textColor="@color/colorWhiteText"/>

        <EditText
            android:id="@+id/edit_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_edit2"
            android:paddingHorizontal="18dp"
            android:paddingVertical="12dp"
            android:layout_marginBottom="8dp"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shift"

            android:textColor="@color/colorWhiteText"/>

        <Spinner
            android:id="@+id/spinner_shift"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/list_shift"
            android:background="@drawable/spinner_bg"/>

<!--        <EditText-->
<!--            android:id="@+id/edit_shift"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@drawable/rounded_corner_edit2"-->
<!--            android:paddingHorizontal="18dp"-->
<!--            android:paddingVertical="12dp"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:inputType="textPersonName"-->
<!--            android:importantForAutofill="no"-->
<!--            tools:ignore="LabelFor" />-->


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_tambah_data"
            android:text="@string/tambah_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhiteText"
            android:background="@drawable/ripple_effect"
            android:layout_marginTop="18dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>